--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,21 +1,28 @@
 <!-- ========== HEADER ========== -->
 <header
-  class="absolute top-0 left-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full bg-transparent border-b border-gray-200 dark:bg-neutral-800 dark:border-neutral-700"
+  class="absolute top-0 left-0 flex flex-wrap py-2 md:pt-4 md:justify-start md:flex-nowrap z-50 w-full bg-transparent dark:bg-[var(--color-primary-blue)] dark:border-neutral-700"
 >
   <nav
     class="relative max-w-[85rem] w-full mx-auto flex items-center justify-between gap-3 py-2 px-4 sm:px-6 lg:px-8"
   >
     <a
-      class="flex-none font-semibold text-xl text-black focus:outline-hidden focus:opacity-80 dark:text-white"
+      class="flex-none text-gray-light font-[Manrope] font-bold md:text-2xl focus:outline-hidden focus:opacity-80 dark:text-white"
       href="#"
-      aria-label="Brand">Brand</a
+      aria-label="Brand">Yusuf Djonga</a
     >
 
-    <div class="md:order-3 flex justify-end items-center gap-x-1">
+    <div class="md:order-3 flex justify-end items-center gap-x-4">
+      <!-- Contact Button -->
+      <a
+        class="hidden py-3 px-6 sm:inline-flex items-center font-semibold text-base rounded-lg border-2 border-[var(--color-primary-gold)] bg-gray-100 text-primary-blue shadow-2xs hover:bg-[var(--color-primary-gold)] disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 focus:outline-hidden focus:bg-gray-100 dark:border-[var(--color-primary-gold)] dark:text-neutral-300 dark:hover:bg-[var(--color-primary-gold)] dark:focus:bg-neutral-700"
+        href="#"
+      >
+        Contact
+      </a>
       <!-- Collapse Button -->
       <button
         type="button"
-        class="md:hidden relative p-2 flex items-center font-medium text-sm rounded-lg border border-gray-200 text-gray-800 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-neutral-700 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+        class="md:hidden relative p-2 flex items-center font-medium text-sm rounded-lg border border-bg-gray-dark text-gray-medium hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-gray-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
         id="hs-header-base-collapse"
         aria-haspopup="dialog"
         aria-expanded="false"
@@ -23,9 +30,8 @@
         aria-label="Toggle navigation"
         data-hs-overlay="#hs-header-base"
       >
-        Menu
         <svg
-          class="shrink-0 size-4 ms-1"
+          class="hs-collapse-open:hidden size-4"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
@@ -35,28 +41,14 @@
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
-          ><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"
-          ></circle><circle cx="12" cy="19" r="1"></circle></svg
+          ><line x1="3" x2="21" y1="6" y2="6"></line><line
+            x1="3"
+            x2="21"
+            y1="12"
+            y2="12"></line><line x1="3" x2="21" y1="18" y2="18"></line></svg
         >
-      </button>
-      <!-- End Collapse Button -->
-
-      <div class="hidden md:inline-block md:me-2">
-        <div class="w-px h-4 bg-gray-300 dark:bg-neutral-700"></div>
-      </div>
-
-      <!-- Offcanvas Toggle -->
-      <button
-        type="button"
-        class="relative size-9 flex justify-center items-center text-sm font-semibold rounded-lg border border-transparent text-gray-800 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none dark:text-white dark:border-transparent dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-        aria-haspopup="dialog"
-        aria-expanded="false"
-        aria-controls="hs-header-base-offcanvas"
-        aria-label="Toggle navigation"
-        data-hs-overlay="#hs-header-base-offcanvas"
-      >
         <svg
-          class="shrink-0 size-4"
+          class="hs-collapse-open:block shrink-0 hidden size-4"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
@@ -66,18 +58,17 @@
           stroke-width="2"
           stroke-linecap="round"
           stroke-linejoin="round"
-          ><rect width="18" height="18" x="3" y="3" rx="2"></rect><path
-            d="M15 3v18"></path><path d="m8 9 3 3-3 3"></path></svg
+          ><path d="M18 6 6 18"></path><path d="m6 6 12 12"></path></svg
         >
         <span class="sr-only">Toggle navigation</span>
       </button>
-      <!-- End Offcanvas Toggle -->
+      <!-- End Collapse Button -->
     </div>
 
     <!-- Collapse -->
     <div
       id="hs-header-base"
-      class="hs-overlay [--auto-close:md] hs-overlay-open:translate-x-0 -translate-x-full fixed top-0 start-0 transition-all duration-300 transform h-full max-w-xs w-full z-50 bg-white md:bg-transparent border-e basis-full grow md:order-2 md:static md:block md:h-auto md:max-w-none md:w-auto md:border-e-transparent md:transition-none md:translate-x-0 md:z-40 md:basis-auto dark:bg-neutral-800 dark:border-e-gray-700 md:dark:border-e-transparent hidden"
+      class="hs-overlay [--auto-close:md] hs-overlay-open:translate-x-0 -translate-x-full fixed top-0 start-0 transition-all duration-300 transform h-full max-w-xs w-full z-50 bg-gray-lights md:bg-transparent border-e basis-full grow md:order-2 md:static md:block md:h-auto md:max-w-none md:w-auto md:border-e-transparent md:transition-none md:translate-x-0 md:z-40 md:basis-auto dark:bg-neutral-800 dark:border-e-gray-700 md:dark:border-e-transparent hidden"
       role="dialog"
       tabindex="-1"
       aria-label="Sidebar"
@@ -95,7 +86,7 @@
               id="hs-header-base-label"
               class="font-bold text-gray-800 dark:text-white"
             >
-              Menu title
+              Menu
             </h3>
             <button
               type="button"
@@ -122,10 +113,10 @@
           <!-- End Offcanvas Header -->
           <div class="grow">
             <div
-              class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-1"
+              class="flex flex-col md:flex-row md:justify-end md:items-center gap-0.5 md:gap-4 dark:border-r dark:border-gray-400 dark:bg-[var(--color-primary-blue)]"
             >
               <a
-                class="p-2 flex items-center text-sm bg-gray-100 text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:bg-neutral-700 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                class="py-2 px-3 flex items-center text-base text-primary-blue font-semibold hover:bg-gray-light rounded-lg focus:outline-hidden focus:bg-gray-100 dark:bg-blue-800 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
                 href="#"
                 aria-current="page"
               >
@@ -145,141 +136,11 @@
                     d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                   ></path></svg
                 >
-                Landing
+                Home
               </a>
 
-              <!-- Dropdown -->
-              <div
-                class="hs-dropdown [--strategy:static] md:[--strategy:fixed] [--adaptive:none] md:[--adaptive:adaptive] [--is-collapse:true] md:[--is-collapse:false]"
-              >
-                <button
-                  id="hs-header-base-dropdown"
-                  type="button"
-                  class="hs-dropdown-toggle w-full p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
-                  aria-haspopup="menu"
-                  aria-expanded="false"
-                  aria-label="Dropdown"
-                >
-                  <svg
-                    class="shrink-0 size-4 me-3 md:me-2 block md:hidden"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    ><path d="m3 10 2.5-2.5L3 5"></path><path
-                      d="m3 19 2.5-2.5L3 14"></path><path d="M10 6h11"
-                    ></path><path d="M10 12h11"></path><path d="M10 18h11"
-                    ></path></svg
-                  >
-                  Dropdown
-                  <svg
-                    class="hs-dropdown-open:-rotate-180 md:hs-dropdown-open:rotate-0 duration-300 shrink-0 size-4 ms-auto md:ms-1"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"><path d="m6 9 6 6 6-6"></path></svg
-                  >
-                </button>
-
-                <div
-                  class="hs-dropdown-menu transition-[opacity,margin] duration-[0.1ms] md:duration-[150ms] hs-dropdown-open:opacity-100 opacity-0 relative w-full md:w-52 hidden z-10 top-full ps-7 md:ps-0 md:bg-white md:rounded-lg md:shadow-md before:absolute before:-top-4 before:start-0 before:w-full before:h-5 md:after:hidden after:absolute after:top-1 after:start-4.5 after:w-0.5 after:h-[calc(100%-4px)] after:bg-gray-100 dark:md:bg-neutral-800 dark:after:bg-neutral-700"
-                  role="menu"
-                  aria-orientation="vertical"
-                  aria-labelledby="hs-header-base-dropdown"
-                >
-                  <div class="py-1 md:px-1 space-y-0.5">
-                    <a
-                      class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                      href="#"
-                    >
-                      About
-                    </a>
-
-                    <div
-                      class="hs-dropdown [--strategy:static] md:[--strategy:absolute] [--adaptive:none] md:[--trigger:hover] [--is-collapse:true] md:[--is-collapse:false] relative"
-                    >
-                      <button
-                        id="hs-header-base-dropdown-sub"
-                        type="button"
-                        class="hs-dropdown-toggle w-full flex justify-between items-center text-sm text-gray-800 rounded-lg p-2 md:px-3 hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                      >
-                        Sub Menu
-                        <svg
-                          class="hs-dropdown-open:-rotate-180 md:hs-dropdown-open:-rotate-90 md:-rotate-90 duration-300 ms-auto shrink-0 size-4"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="24"
-                          height="24"
-                          viewBox="0 0 24 24"
-                          fill="none"
-                          stroke="currentColor"
-                          stroke-width="2"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                          ><path d="m6 9 6 6 6-6"></path></svg
-                        >
-                      </button>
-
-                      <div
-                        class="hs-dropdown-menu transition-[opacity,margin] duration-[0.1ms] md:duration-[150ms] hs-dropdown-open:opacity-100 opacity-0 relative md:w-48 hidden z-10 md:mt-2 md:mx-2.5! md:top-0 md:end-full ps-7 md:ps-0 md:bg-white md:rounded-lg md:shadow-md dark:bg-neutral-800 dark:divide-neutral-700 before:hidden md:before:block before:absolute before:-end-5 before:top-0 before:h-full before:w-5 md:after:hidden after:absolute after:top-1 after:start-4.5 after:w-0.5 after:h-[calc(100%-4px)] after:bg-gray-100 dark:md:bg-neutral-800 dark:after:bg-neutral-700"
-                        role="menu"
-                        aria-orientation="vertical"
-                        aria-labelledby="hs-header-base-dropdown-sub"
-                      >
-                        <div class="p-1 space-y-1">
-                          <a
-                            class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                            href="#"
-                          >
-                            About
-                          </a>
-
-                          <a
-                            class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                            href="#"
-                          >
-                            Downloads
-                          </a>
-
-                          <a
-                            class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                            href="#"
-                          >
-                            Team Account
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-
-                    <a
-                      class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                      href="#"
-                    >
-                      Downloads
-                    </a>
-
-                    <a
-                      class="p-2 md:px-3 flex items-center text-sm text-gray-800 rounded-lg hover:bg-gray-100 focus:outline-hidden focus:bg-gray-100 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300 dark:focus:bg-neutral-700 dark:focus:text-neutral-300"
-                      href="#"
-                    >
-                      Team Account
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <!-- End Dropdown -->
-
               <a
-                class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                class="py-2 px-3 flex items-center text-base text-primary-blue font-semibold hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
                 href="#"
               >
                 <svg
@@ -296,11 +157,11 @@
                   ><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                   ></path><circle cx="12" cy="7" r="4"></circle></svg
                 >
-                Account
+                About
               </a>
 
               <a
-                class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                class="py-2 px-3 flex items-center text-base text-primary-blue font-semibold hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
                 href="#"
               >
                 <svg
@@ -323,11 +184,11 @@
                     y="6"
                     rx="2"></rect></svg
                 >
-                Work
+                Services
               </a>
 
               <a
-                class="p-2 flex items-center text-sm text-gray-800 hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                class="py-2 px-3 flex items-center text-base text-primary-blue font-semibold hover:bg-gray-100 rounded-lg focus:outline-hidden focus:bg-gray-100 dark:text-neutral-200 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
                 href="#"
               >
                 <svg
@@ -346,7 +207,14 @@
                   ></path><path d="M18 14h-8"></path><path d="M15 18h-5"
                   ></path><path d="M10 6h8v4h-8V6Z"></path></svg
                 >
-                Blog
+                Insights
+              </a>
+              <!-- Contact Button -->
+              <a
+                class="sm:hidden py-3 px-6 inline-flex items-center font-semibold text-base rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 focus:outline-hidden focus:bg-gray-100 dark:border-neutral-700 dark:text-neutral-300 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700"
+                href="#"
+              >
+                Contact
               </a>
             </div>
           </div>
@@ -357,51 +225,3 @@
   </nav>
 </header>
 <!-- ========== END HEADER ========== -->
-
-<!-- Offcanvas -->
-<div
-  id="hs-header-base-offcanvas"
-  class="hs-overlay hs-overlay-open:translate-x-0 hidden -translate-x-full fixed top-0 start-0 transition-all duration-300 transform h-full max-w-xs w-full z-80 bg-white border-e dark:bg-neutral-800 dark:border-neutral-700"
-  role="dialog"
-  tabindex="-1"
-  aria-labelledby="hs-header-base-offcanvas-label"
->
-  <div
-    class="flex justify-between items-center py-3 px-4 border-b border-gray-200 dark:border-neutral-700"
-  >
-    <h3
-      id="hs-header-base-offcanvas-label"
-      class="font-bold text-gray-800 dark:text-white"
-    >
-      Offcanvas title
-    </h3>
-    <button
-      type="button"
-      class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-700 dark:hover:bg-neutral-600 dark:text-neutral-400 dark:focus:bg-neutral-600"
-      aria-label="Close"
-      data-hs-overlay="#hs-header-base-offcanvas"
-    >
-      <span class="sr-only">Close</span>
-      <svg
-        class="shrink-0 size-4"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        stroke="currentColor"
-        stroke-width="2"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        ><path d="M18 6 6 18"></path><path d="m6 6 12 12"></path></svg
-      >
-    </button>
-  </div>
-  <div class="p-4">
-    <p class="text-gray-800 dark:text-neutral-400">
-      Some text as placeholder. In real life you can have the elements you have
-      chosen. Like, text, images, lists, etc.
-    </p>
-  </div>
-</div>
-<!-- End Offcanvas -->
